@@ -226,8 +226,13 @@ importFrom(scuttle,sumCountsAcrossFeatures)
 importFrom(scuttle,summarizeAssayByGroup)
 importFrom(stats,as.dist)
 importFrom(stats,as.formula)
+importFrom(stats,chisq.test)
 importFrom(stats,cmdscale)
+importFrom(stats,cor)
+importFrom(stats,cor.test)
+importFrom(stats,hclust)
 importFrom(stats,median)
+importFrom(stats,p.adjust)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,terms)
